[package]
name = "json5-lua"
version = "0.1.0"
edition = "2021"

[lib]
name = "json5"
crate-type = ["cdylib"]

[dependencies]
serde_json = "=1.0.116"
serde_json5 = "0.1.0"
mlua = { version = "0.9.7", features = ["luajit", "module", "serialize"] }

[target.x86_64-apple-darwin]
rustflags = [
  "-C", "link-arg=-undefined",
  "-C", "link-arg=dynamic_lookup",
]

[target.aarch64-apple-darwin]
rustflags = [
  "-C", "link-arg=-undefined",
  "-C", "link-arg=dynamic_lookup",
]
